@@ -8,6 +8,8 @@ Date: 27/11/25
   Changes:
     - The Sentient Spider is now equipped with six electromagnetic penetrators instead of one (buffed) teslagun.
     - Clicking an item in a trade while a hex core is open now opens the trade overview instead of the catalog.
+  Bugfixes:
+    - Fixed crash when viewing red star ranked items if your character is missing (in editor mode, god mode, etc.).
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 27/11/25
